# Manipulator

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Application/: README.md
Model/: README.md
STM32F407/: .cproject  .gitignore  .project  Manipulator.elf.launch  README.md  stm32f4_flash.ld
STM32F407/Debug/: Manipulator.elf  Manipulator.list  Manipulator.map
STM32F407/Libraries/Device/STM32F4xx/Include/: stm32f4xx.h
STM32F407/inc/Comm/: CAN.h  UARTComm.h  dxl_rx64.h
STM32F407/inc/Config/: BoardConfig.h  EncoderConfig.h  FreeRTOSConfig.h
STM32F407/inc/Motor/: HighPowerMotor.h  Motor.h  PWMMotor.h  ServoMotor.h
STM32F407/inc/Utils/: Debug.h  Utility.h
STM32F407/src/: BoardConfig.cpp  BoardConfig.h  CAN.h  ENK.c  ENK.h  EncoderConfig.c  EncoderConfig.h  HighPowerMotor.cpp  HighPowerMotor.h  Logger.h  ManipulatorStateMachine.cpp  ManipulatorStateMachine.h  Motor.cpp  Motor.h  PWMMotor.cpp  PWMMotor.h  ServoMotor.cpp  ServoMotor.h  State.h  StateMachine.h  defines.h  dxl_rx64.c  dxl_rx64.h  main.c  main.cpp  stm32f4xx_it.h  syscalls.c  system_stm32f4xx.c  tiny_printf.c
STM32F407/src/Comm/: CAN.c  UARTComm.c  dxl_rx64.c  dxl_rx64.h
STM32F407/src/Config/: BoardConfig.c  EncoderConfig.c
STM32F407/src/Motor/: EncoderConfig.h  HighPowerMotor.cpp  HighPowerMotor.h  Motor.cpp  PWMMotor.cpp  PWMMotor.h  ServoMotor.cpp  ServoMotor.h
STM32F407/src/Utils/: BoardConfig.h  CyclicBuffer.c  State.h  StateMachine.cpp  StateMachine.h  Utility.c
STM32F407/startup/: startup_stm32.s
Simulation/: .gitignore  README.md  manipulator.urdf
Simulation/src/manipulator/: CMakeLists.txt  package.xml
Simulation/src/manipulator/config/: controllers_effort.yaml  controllers_effort_position.yaml  controllers_effort_trajectory.yaml  controllers_effort_velocity.yaml  controllers_velocity.yaml  controllers_velocity_position.yaml  controllers_velocity_trajectory.yaml  controllers_velocity_velocity.yaml  hardware.yaml  joint_names_manipulator.yaml  joints.yaml
Simulation/src/manipulator/launch/: display.launch  gazebo.launch  manipulator_dkin.launch
Simulation/src/manipulator/meshes/: arm_link.STL  base_link.STL  forearm_link.STL  wrist_pitch_link.STL  wrist_rotation_link.STL
Simulation/src/manipulator/msg/: Trajectory.msg
Simulation/src/manipulator/src/: CyclicBuffer.h  RobotHW.cpp  RobotHW.h  RobotHWBase.h  RobotHWInterface.cpp  RobotHWInterface.h  RobotHWInterfaceBase.h  RobotHWInterfaceNode.cpp  RobotHWNode.cpp  RobotSerialComm.cpp  RobotSerialComm.h  RobotTest.cpp  RobotTestCircle.cpp  RobotTestLine.cpp  kdl_dkin.cpp
Simulation/src/manipulator/urdf/: manipulator.urdf  manipulator_effort.urdf  manipulator_velocity.urdf  urdf.rviz
Thesis/: .gitignore  AbstractENG.tex  AbstractPL.tex  Copyright.tex.bak  Oswiadczenie.tex  Style.tex  TitlePage2018.tex  abstrakty.aux  abstrakty.bcf  abstrakty.run.xml  abstrakty.tex  glowny.aux  glowny.bbl  glowny.bcf  glowny.blg  glowny.dvi  glowny.lof  glowny.lot  glowny.out  glowny.run.xml  glowny.tex  glowny.tex.bak  glowny.toc  master.bib  master_thesis.tex
Thesis/Bibliografia/: books.bib.bak  books.blg  online.bib.bak
Thesis/bibliography/: master.bib
Thesis/template/: Oswiadczenie_autora_pracy_dyplomowej_w_jezyku_angielskim.doc  Strona_tytulowa_praca_dyplomowa_mgr_EiTI.docx
