<package>
  <name>manipulator</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for manipulator</p>
    <p>This package contains configuration data, 3D models and launch files
for manipulator robot</p>
  </description>
  <author>Marcin Baran</author>
  <maintainer email="marcinb280@op.pl" />
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>roslaunch</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>

  <run_depend>robot_state_publisher</run_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>joint_state_controller</run_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>joint_limits_interface</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>gazebo</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>spacenav_node</run_depend>
  <export>
    <architecture_independent />
  </export>
</package>
